Major bug fix - changed userTweets function to only create a blank array if the user didn't already exist. Additionally, the launchStream function was reversing the streams themselves, not just the last eleven tweets for display purposes. This was completely messing up the order after the array was reversed chronologically but tweets were still being pushed to the back of the array upon completion. In order to remedy the bug, the _.last(stream,11) tweets were slice() before being stored in the baseTweetReversed array.  This commit includes numerous design css tweaks including a scroll view for tweet overflow, static side bars, and an adjusted home link in the logoBox.

--- a/css/app.css
+++ b/css/app.css
@@ -13,8 +13,9 @@ body {
   max-width: initial;
 }
 #appContainer {
-  overflow-y: scroll;
-  padding: 30px 20px;
+  overflow: scroll;
+  padding: 30px 20px 100px 20px;
+  height: 100%;
 }
 
 h1.logo{
@@ -24,7 +25,7 @@ h1.logo{
   font-style: italic;
   color: #FFF;
   text-align: center;
-  margin-top: 40px;
+  margin: 40px 0 0 0;
 }
 
 h1 {
@@ -93,6 +94,9 @@ h8 {
   background: #F96B5C;
   height: 170px;
 }
+#youTweet div:nth-child(1){
+  padding: 40px;
+}
 ::-webkit-input-placeholder {
   color: #FFF;
   opacity: .53;
@@ -155,7 +159,7 @@ input[type=text] {
 }
 .overlayRight {
   background: rgba(29, 41, 64, 0.70);
-  padding: 15px;
+  padding: 40px 40px 0 40px;
   width: 100%;
   height: 100%;
 }
@@ -189,7 +193,8 @@ input[type=submit].success {
   height: 170px;
 }
 input[type=submit].success:hover,
-input[type=submit].success:active {
+input[type=submit].success:active,
+input[type=submit].success:focus {
   background-color: #F89186;
 }
 input[type=text]:focus {
@@ -238,4 +243,19 @@ input[type=text]:focus {
 .stats div{
   text-align: center;
   margin-top: 50px;
+}
+
+.stats{
+  position: fixed;
+  right: 0;
+}
+
+.home{
+  text-align: center;
+}
+
+.home a{
+  text-align: center;
+  color: #FFF;
+  font-weight: 800;
 }
